--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ img {
 		<div style="margin-left: 50px; margin-right: 50px;">
 		<p>Why play alone when you can play with your beloved dog friend(s)? West Coast Park Dog Run is known for its amenities, with lots of room for you and your dog(s) to have a jolly good time.</p>
 		<div class="img"><img src="dogrun1.jpg" alt="Happy dogs running"></div><br>
-		<div class="img"><img src="dogrun2.jpg" alt="Another happy dog running"></div>
+		<div class="img"><img src="dogrun2.png" alt="Another happy dog running"></div>
 		<p>The best part about bringing your dog(s) here is that there is a self-service dog wash station located just a few minutes away from the dog run, complete with shampoo and a blowdryer. The dog run is open 24/7, but we recommend going in the early evening for the best weather conditions.</p></div>
 		</div>
 	
