--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ h1 {
 }
 h2 {
   text-align:center; 
-  color:#006D77;
+  color:##1ABC9C;
 }
 body {
   font-family:"Playfair Display", serif;
@@ -40,7 +40,7 @@ img {
 .header {
   padding: 10px;
   text-align: center;
-  background: #1abc9c;
+  background: #1ABC9C;
   color: white;
   font-size: 24px;
 }
@@ -83,7 +83,7 @@ img {
 	</ul>
 <hr>
 	
-	<h1 id="C1">GETTING TO WEST COAST PARK</h1>
+	<h1 id="C1">Getting to West Coast Park</h1>
 	<p style="text-align:right; font-size:12px"><a href="#top">Back to top</a></p>
 
 	<p>West Coast Park is located in West Singapore. Here's a map of the place:</p>
@@ -97,7 +97,7 @@ img {
 
 	<hr>
 
-	<h1 id="C2">THINGS TO DO</h1>
+	<h1 id="C2">Things to Do</h1>
 	<p style="text-align:right; font-size:12px"><a href="#top">Back to top</a></p>
 
 	<p>West Coast Park boasts jogging and cycling trails, bird watching, fitness equipment, a dog run, barbecue pits and overnight camping. Open fields are popular for kite flying and pick-up soccer matches. At the same time, children of all ages can be kept busy on some of the best play equipment in Singapore. Here are just a few things that you may want to consider doing during your next trip to West Coast Park.</p>
@@ -127,7 +127,7 @@ img {
 	
 	<hr>
 
-	<h1 id="C3">BEFORE GOING TO WEST COAST PARK</h2>
+	<h1 id="C3">Before Going to West Coast Park</h2>
 	<p style="text-align:right; font-size:12px"><a href="#top">Back to top</a></p>
 
 	<p>Now that you know of all the things to look forward to, there are just a few more things left to do! Click on the buttons below to visit a few other essential sites that we have carefully selected, to help you have the best possible outdoors experience.</p>
