--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ img {
 	<hr>
 
 	<h1 id="C3">Before Going to West Coast Park</h2>
-	<p style="text-align:right; font-size:12px"><a href="#top">Back to top</a></p>
+	<br><span style="text-align:right; font-size:12px"><a href="#top">Back to top</a></span>
 
 	<p>Now that you know of all the things to look forward to, there are just a few more things left to do! Click on the buttons below to visit a few other essential sites that we have carefully selected, to help you have the best possible outdoors experience.</p>
 
