--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ img {
 <hr>
 	
 	<h1 id="C1">Getting to West Coast Park</h1>
-	<p style="text-align:right; font-size:12px"><a href="#top">Back to top</a></p>
+	<br><span style="text-align:right; font-size:14px"><a href="#top">Back to top</a></span>
 
 	<p>West Coast Park is located in West Singapore. Here's a map of the place:</p>
 	<img src="wcpmap.jpg" width="1400" height="405" alt="Map of West Coast Park" title="WCP Map">
@@ -98,7 +98,7 @@ img {
 	<hr>
 
 	<h1 id="C2">Things to Do</h1>
-	<p style="text-align:right; font-size:12px"><a href="#top">Back to top</a></p>
+	<br><span style="text-align:right; font-size:14px"><a href="#top">Back to top</a></span>
 
 	<p>West Coast Park boasts jogging and cycling trails, bird watching, fitness equipment, a dog run, barbecue pits and overnight camping. Open fields are popular for kite flying and pick-up soccer matches. At the same time, children of all ages can be kept busy on some of the best play equipment in Singapore. Here are just a few things that you may want to consider doing during your next trip to West Coast Park.</p>
 
@@ -128,7 +128,7 @@ img {
 	<hr>
 
 	<h1 id="C3">Before Going to West Coast Park</h1>
-	<span style="text-align:right; font-size:12px"><a href="#top">Back to top</a></span>
+	<br><span style="text-align:right; font-size:14px"><a href="#top">Back to top</a></span>
 
 	<p>Now that you know of all the things to look forward to, there are just a few more things left to do! Click on the buttons below to visit a few other essential sites that we have carefully selected, to help you have the best possible outdoors experience.</p>
 
@@ -143,7 +143,7 @@ img {
 	<br>
 	<hr>
 		
-	<p style="text-align:center; font-size:12px">This website was designed by: Chew Wei Sheng from AED23M. Click <a href = "mailto:NIE19.CWS8237@e.ntu.edu.sg">here</a> to send me an email.</p>
+	<p style="text-align:center; font-size:14px">This website was designed by: Chew Wei Sheng from AED23M. Click <a href = "mailto:NIE19.CWS8237@e.ntu.edu.sg">here</a> to send me an email.</p>
 	
 	<br><br>
 	
