--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@ img {
 <body>
 
 <p><i>"But... There's nothing to do in West Singapore!"</i> I hear you say. That's where you are <span style="font-size:26px;">WRONG!</span></p>
+	
 <p>Look no further, because this webpage will tell you all that you need to know for a beautiful day out at West Coast Park.</p>
+	
 <p>For quicker navigation through this simple webpage, feel free to make use of the following links:</p>
 
 	<ul>
@@ -84,10 +86,11 @@ img {
 <hr>
 	
 	<h1 id="C1">Getting to West Coast Park</h1>
-	<br><span style="text-align:right; font-size:14px"><a href="#top">Back to top</a></span>
+	<p style="text-align:right; font-size:14px"><a href="#top">Back to top</a></p>
 
 	<p>West Coast Park is located in West Singapore. Here's a map of the place:</p>
 	<img src="wcpmap.jpg" width="1400" height="405" alt="Map of West Coast Park" title="WCP Map">
+	
 	<p>To get to here, you can:</p>
 	<ol>
 	<li>Take the <strong>MRT</strong> to <strong>Haw Par Villa (CC25)</strong>. From there, take <strong>Bus 176</strong>. 5 minutes and 6 stops should bring you to the doorstep of West Coast Park.</li>
@@ -98,7 +101,7 @@ img {
 	<hr>
 
 	<h1 id="C2">Things to Do</h1>
-	<br><span style="text-align:right; font-size:14px"><a href="#top">Back to top</a></span>
+	<p style="text-align:right; font-size:14px"><a href="#top">Back to top</a></p>
 
 	<p>West Coast Park boasts jogging and cycling trails, bird watching, fitness equipment, a dog run, barbecue pits and overnight camping. Open fields are popular for kite flying and pick-up soccer matches. At the same time, children of all ages can be kept busy on some of the best play equipment in Singapore. Here are just a few things that you may want to consider doing during your next trip to West Coast Park.</p>
 
@@ -128,7 +131,7 @@ img {
 	<hr>
 
 	<h1 id="C3">Before Going to West Coast Park</h1>
-	<br><span style="text-align:right; font-size:14px"><a href="#top">Back to top</a></span>
+	<p style="text-align:right; font-size:14px"><a href="#top">Back to top</a></p>
 
 	<p>Now that you know of all the things to look forward to, there are just a few more things left to do! Click on the buttons below to visit a few other essential sites that we have carefully selected, to help you have the best possible outdoors experience.</p>
 
