--- a/index.html
+++ b/index.html
@@ -62,9 +62,6 @@ img {
 .btn:hover {
   background-color: RoyalBlue;
 }	
-html {
-  scroll-behavior: smooth;
-}
 </style>
 </head>
 
@@ -149,7 +146,7 @@ html {
 	<br>
 	<hr>
 		
-	<p style="text-align:center; font-size:14px">This website was designed by: Chew Wei Sheng from AED23M. Click <a href = "mailto:NIE19.CWS8237@e.ntu.edu.sg">here</a> to send me an email.</p>
+	<p style="text-align:center; font-size:14px; position:fixed;">This website was designed by: Chew Wei Sheng from AED23M. Click <a href = "mailto:NIE19.CWS8237@e.ntu.edu.sg">here</a> to send me an email.</p>
 	
 	<br><br>
 	
