--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@ img {
 	<br>
 	<hr>
 		
-	<p style="text-align:center; font-size:14px; position:fixed;">This website was designed by: Chew Wei Sheng from AED23M. Click <a href = "mailto:NIE19.CWS8237@e.ntu.edu.sg">here</a> to send me an email.</p>
-	
+	<p style="text-align:center; font-size:14px; position:absolute; bottom:0; left:0; width:100%;">This website was designed by: Chew Wei Sheng from AED23M. Click <a href = "mailto:NIE19.CWS8237@e.ntu.edu.sg">here</a> to send me an email.</p>
 	<br><br>
 	
 </body>
