--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@ img {
 .btn:hover {
   background-color: RoyalBlue;
 }	
+div.fixed {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 300px;
+  border: 3px solid #73AD21;
+}
 </style>
 </head>
 
@@ -145,9 +152,10 @@ img {
 
 	<br>
 	<hr>
-		
-	<p style="text-align:center; font-size:14px; position:absolute; bottom:0; left:0; width:100%;">This website was designed by: Chew Wei Sheng from AED23M. Click <a href = "mailto:NIE19.CWS8237@e.ntu.edu.sg">here</a> to send me an email.</p>
+	<div class="fixed">	
+	<p style="text-align:center; font-size:14px;">This website was designed by: Chew Wei Sheng from AED23M. Click <a href = "mailto:NIE19.CWS8237@e.ntu.edu.sg">here</a> to send me an email.</p>
 	<br><br>
+	</div>
 	
 </body>
 
