--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ img {
 <hr>
 	
 	<h1 id="C1">Getting to West Coast Park</h1>
-	<p style="text-align:right; font-size:14px"><a href="#top">Back to top</a></p>
+	<p style="text-align:right; font-size:14px"><a href="#top"><i class="fas fa-angle-double-up">Back to top</i></a></p>
 
 	<p>West Coast Park is located in West Singapore. Here's a map of the place:</p>
 	<img src="wcpmap.jpg" width="1400" height="405" alt="Map of West Coast Park" title="WCP Map">
