--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ img {
   border: 3px solid black;
 }
 .btn {
-  background-color: DodgerBlue;
+  background-color: #1ABC9C;
   border: none;
   color: white;
   padding: 30px 30px;
@@ -60,7 +60,7 @@ img {
   cursor: pointer;
 }
 .btn:hover {
-  background-color: RoyalBlue;
+  background-color: #006D77;
 }	
 </style>
 </head>
